src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>LeanData__Reporting_Recent_Marketing_Touches__c</fullName>
        <label>Reporting Recent Marketing Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Target_Account_Number__c</fullName>
        <formula>IF( LeanData__Reporting_Target_Account__c, 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Target Acct Num (Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Target_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Target Account (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Total_Leads_and_Contacts__c</fullName>
        <label>Reporting Total Leads and Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Total_Marketing_Touches__c</fullName>
        <label>Reporting Total Marketing Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Total_Sales_Touches__c</fullName>
        <label>Reporting Total Sales Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Routing_Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Routing Action</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Search__c</fullName>
        <description>LeanData search field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LeanData Search</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegalAccountName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalAccountNameful__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal Account Full Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Logistic Accounts</relationshipLabel>
        <relationshipName>Logistic_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Name_Ext__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To be used for additional information like: Division Name, Branch Name, Plant Name, etc.</inlineHelpText>
        <label>Legal Name Ext.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Acquisition_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lifecycle - Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Business_Developement_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Basic Onboarding Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Disengaged_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Basic Onboarding End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Disengagement_Reason__c</fullName>
        <label>Lifecycle Disengagement Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Partner_Lifecycle__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Expired</fullName>
                </value>
                <value>
                    <fullName>Not Making Business</fullName>
                </value>
                <value>
                    <fullName>Moved to a Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lifecycle_Revenue_Producing_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lifecycle - Revenue Producing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Logistic_Account_Number__c</fullName>
        <description>System generated auto number for logistic accounts</description>
        <displayFormat>7{000000000}</displayFormat>
        <label>Logistic Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Logistic_Account_Type__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bill-To</fullName>
                </value>
                <value>
                    <fullName>Ship-To</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDMID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MDM ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MU_GCBT_Code__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MU/GCBT Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MU_GCBT_Name__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MU/GCBT Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketPosition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Market Position</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Code__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <label>Market Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BWEB</fullName>
                    <isActive>false</isActive>
                    <label>BWEB</label>
                </value>
                <value>
                    <fullName>CABL</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                    <isActive>false</isActive>
                    <label>EN</label>
                </value>
                <value>
                    <fullName>ENR</fullName>
                </value>
                <value>
                    <fullName>ENT</fullName>
                    <isActive>false</isActive>
                    <label>ENT</label>
                </value>
                <value>
                    <fullName>GAM</fullName>
                    <isActive>false</isActive>
                    <label>GAM</label>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>GOVT</fullName>
                    <isActive>false</isActive>
                    <label>GOVT</label>
                </value>
                <value>
                    <fullName>HOSP</fullName>
                    <isActive>false</isActive>
                    <label>HOSP</label>
                </value>
                <value>
                    <fullName>HOTH</fullName>
                    <isActive>false</isActive>
                    <label>HOTH</label>
                </value>
                <value>
                    <fullName>LE</fullName>
                    <isActive>false</isActive>
                    <label>LE</label>
                </value>
                <value>
                    <fullName>MANU</fullName>
                </value>
                <value>
                    <fullName>MNLG</fullName>
                    <isActive>false</isActive>
                    <label>MNLG</label>
                </value>
                <value>
                    <fullName>O&amp;G</fullName>
                    <isActive>false</isActive>
                    <label>O&amp;G</label>
                </value>
                <value>
                    <fullName>OTEN</fullName>
                </value>
                <value>
                    <fullName>OTEP</fullName>
                    <isActive>false</isActive>
                    <label>OTEP</label>
                </value>
                <value>
                    <fullName>OTLE</fullName>
                    <isActive>false</isActive>
                    <label>OTLE</label>
                </value>
                <value>
                    <fullName>OWEB</fullName>
                    <isActive>false</isActive>
                    <label>OWEB</label>
                </value>
                <value>
                    <fullName>PS</fullName>
                    <isActive>false</isActive>
                    <label>PS</label>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>TRAN</fullName>
                    <isActive>false</isActive>
                    <label>TRAN</label>
                </value>
                <value>
                    <fullName>TRLG</fullName>
                </value>
                <value>
                    <fullName>TXLE</fullName>
                    <isActive>false</isActive>
                    <label>TXLE</label>
                </value>
                <value>
                    <fullName>UNAS</fullName>
                </value>
                <value>
                    <fullName>UTIL</fullName>
                    <isActive>false</isActive>
                    <label>UTIL</label>
                </value>
                <value>
                    <fullName>WEBS</fullName>
                    <isActive>false</isActive>
                    <label>WEBS</label>
                </value>
                <value>
                    <fullName>WSCL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BIGWEB</fullName>
                    <isActive>false</isActive>
                    <label>BIGWEB</label>
                </value>
                <value>
                    <fullName>CABLE</fullName>
                </value>
                <value>
                    <fullName>ENERGY</fullName>
                    <isActive>false</isActive>
                    <label>ENERGY</label>
                </value>
                <value>
                    <fullName>ENERGY AND NATURAL RESOURCES</fullName>
                </value>
                <value>
                    <fullName>ENTERPRISE</fullName>
                    <isActive>false</isActive>
                    <label>ENTERPRISE</label>
                </value>
                <value>
                    <fullName>GAM</fullName>
                    <isActive>false</isActive>
                    <label>GAM</label>
                </value>
                <value>
                    <fullName>GOVERNMENT</fullName>
                    <isActive>false</isActive>
                    <label>GOVERNMENT</label>
                </value>
                <value>
                    <fullName>GOVERNMENT AND CITIES</fullName>
                </value>
                <value>
                    <fullName>HOSPITALITY</fullName>
                    <isActive>false</isActive>
                    <label>HOSPITALITY</label>
                </value>
                <value>
                    <fullName>LARGE ENTERPRISE</fullName>
                    <isActive>false</isActive>
                    <label>LARGE ENTERPRISE</label>
                </value>
                <value>
                    <fullName>MANUFACTURING</fullName>
                </value>
                <value>
                    <fullName>MANUFACTURING AND LOGISTICS</fullName>
                    <isActive>false</isActive>
                    <label>MANUFACTURING AND LOGISTICS</label>
                </value>
                <value>
                    <fullName>OIL &amp; GAS</fullName>
                    <isActive>false</isActive>
                    <label>OIL &amp; GAS</label>
                </value>
                <value>
                    <fullName>OTHER ENTERPRISE</fullName>
                </value>
                <value>
                    <fullName>OTHER LARGE ENTERPRISE</fullName>
                    <isActive>false</isActive>
                    <label>OTHER LARGE ENTERPRISE</label>
                </value>
                <value>
                    <fullName>Other TEPS</fullName>
                    <isActive>false</isActive>
                    <label>Other TEPS</label>
                </value>
                <value>
                    <fullName>Other Webscale</fullName>
                    <isActive>false</isActive>
                    <label>Other Webscale</label>
                </value>
                <value>
                    <fullName>PUBLIC SECTOR</fullName>
                    <isActive>false</isActive>
                    <label>PUBLIC SECTOR</label>
                </value>
                <value>
                    <fullName>SERVICE PROVIDERS</fullName>
                </value>
                <value>
                    <fullName>TECHNICAL XTRA LARGE ENTERPRISE</fullName>
                    <isActive>false</isActive>
                    <label>TECHNICAL XTRA LARGE ENTERPRISE</label>
                </value>
                <value>
                    <fullName>TRANSPORTATION</fullName>
                    <isActive>false</isActive>
                    <label>TRANSPORTATION</label>
                </value>
                <value>
                    <fullName>TRANSPORTATION AND LOGISTICS</fullName>
                </value>
                <value>
                    <fullName>UNASSIGNED</fullName>
                </value>
                <value>
                    <fullName>UTILITIES</fullName>
                    <isActive>false</isActive>
                    <label>UTILITIES</label>
                </value>
                <value>
                    <fullName>WEBSCALE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Market North America</fullName>
                </value>
                <value>
                    <fullName>Market Latin America</fullName>
                </value>
                <value>
                    <fullName>Market Middle East and Africa</fullName>
                </value>
                <value>
                    <fullName>Market India</fullName>
                </value>
                <value>
                    <fullName>Market Greater China</fullName>
                </value>
                <value>
                    <fullName>Market Europe</fullName>
                </value>
                <value>
                    <fullName>Market Asia Pacific &amp; Japan</fullName>
                </value>
                <value>
                    <fullName>Market Other</fullName>
                </value>
                <value>
                    <fullName>Market NFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MyCustomerID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>My Customer ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCP_P20_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>P20 ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Applicable_Price_Lists__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter applicable CLP and MLP price list names, separated by comma, considering the order reflects the sequence in which prices will be applied.</inlineHelpText>
        <label>Applicable Price Lists</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_AttachPercentage__c</fullName>
        <formula>NokiaCPQ_Attachment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AttachPercentage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Incoterm__c</fullName>
        <label>Incoterm %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Performance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nokia_Selected_Portfolio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Nokia Selected Portfolio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_L7HierarchyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old L7HierarchyID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperationalCustomerName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operational Customer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <description>It contains Name of the Organization of the Respective Account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P20Data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P20 Data</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P20IDDeletionflag__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>P20 ID Deletion Flag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P20_Logistic_ID__c</fullName>
        <description>P20 ID for Logistic accounts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>P20 Logistic ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRSReportingAlias__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PRS Reporting Alias</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRSReportingName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PRS Reporting Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Number__c</fullName>
        <formula>Parent.AccountNumber</formula>
        <label>Parent Account Number / Customer Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Partner Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Lifecycle_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Lifecycle Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Lifecycle__c</fullName>
        <label>Partner Lifecycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Revenue Producing</fullName>
                </value>
                <value>
                    <fullName>Disengaged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Program_Old_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Program Old Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Program__c</fullName>
        <label>Partner Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GPP 0.0</fullName>
                </value>
                <value>
                    <fullName>GPP 1.0</fullName>
                </value>
                <value>
                    <fullName>GPP 2.0</fullName>
                </value>
                <value>
                    <fullName>GPP 3.0</fullName>
                </value>
                <value>
                    <fullName>Global Alliance</fullName>
                </value>
                <value>
                    <fullName>SPAAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Registration_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Onboarding End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Registration_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Onboarding Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Registration_Status__c</fullName>
        <label>Partner Onboarding Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Waiting for Approval</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Basic Onboarding</fullName>
                </value>
                <value>
                    <fullName>Light Onboarding</fullName>
                    <isActive>false</isActive>
                    <label>Light Onboarding</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Status__c</fullName>
        <description>req - 2932 Ability to select the Partner Status with values Active, Customer Terminated, Partner Terminated. Email notification to be sent out if the Partner Status is Customer Terminated or Partner Terminated</description>
        <label>Partner Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Customer Terminated</fullName>
                </value>
                <value>
                    <fullName>Partner Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Industrial Partner / System Integrator</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Indirect Reseller</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_User_Report__c</fullName>
        <formula>IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,
HYPERLINK(&quot;#/sObject/00O4100000857TZ/view?fv0=&quot;&amp;Id,&quot;Link Here&quot; , &quot;_self&quot;), 
HYPERLINK(&quot;/00O4100000857TZ?pv0=&quot; &amp;Id, &quot;Link Here&quot; , &quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner User Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Space_Link__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you do not have access, you will receive an error when you click the link. If you would like to request for access, please contact your Partner Sales Manager.</inlineHelpText>
        <label>Personal Space Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Personal_Space_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Compliance Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PotentialCompetitor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Potential Competitor</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Approved_Product_Notification_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pre-Approved Product Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Published_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Published Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QTC_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QTC ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTC_Sold_To__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>QTC Sold To</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_End__c</fullName>
        <description>Legal Entity Field Req #625</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for End</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Asia and Japan</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Middle East and Africa</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RoomNo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Room Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Lead_Conversion_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(SFCCLtngPtr__Number_Leads_Converted__c, 0)&lt;&gt;0, NULLVALUE(SFCCLtngPtr__Number_Leads_Total__c, 0)&lt;&gt;0), SFCCLtngPtr__Number_Leads_Converted__c / SFCCLtngPtr__Number_Leads_Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Conversion Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Lead_To_Opportunity_Close_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(SFCCLtngPtr__Number_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(SFCCLtngPtr__Number_Leads_Converted__c, 0)&lt;&gt;0), SFCCLtngPtr__Number_Closed_Won_Opportunities__c / SFCCLtngPtr__Number_Leads_Converted__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead To Opportunity Close Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Number_Closed_Lost_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed lost opportunities owned by the current partner account</description>
        <label>Number Closed Lost Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Number_Closed_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed opportunities owned by the current partner account</description>
        <label>Number Closed Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Number_Closed_Won_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed won opportunities owned by the current partner account</description>
        <label>Number Closed Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Number_Leads_Converted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads converted by the partner account</description>
        <label>Number Leads Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Number_Leads_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads owned by the partner account all time, including converted and active</description>
        <label>Number Leads Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Number_Open_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number open opportunities owned by the current partner account</description>
        <label>Number Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFCCLtngPtr__Opportunity_Win_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(SFCCLtngPtr__Number_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(SFCCLtngPtr__Number_Closed_Opportunities__c, 0)&lt;&gt;0), SFCCLtngPtr__Number_Closed_Won_Opportunities__c / SFCCLtngPtr__Number_Closed_Opportunities__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Win Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
</CustomObject>